--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "clean": "nuxi cleanup",
+    "clean": "nuxt cleanup",
     "clean:full": "node ./scripts/clean.mjs .output .nuxt node_modules pnpm-lock.yaml",
     "reinstall": "node ./scripts/clean.mjs .output .nuxt node_modules && pnpm install --frozen-lockfile",
     "upgrade": "pnpm clean:deps && pnpm install",
-    "prepare": "nuxi prepare",
+    "prepare": "nuxt prepare",
     "postprepare": "husky || true",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
-    "postinstall": "nuxi prepare",
-    "local": "nuxi dev --dotenv .env",
-    "build": "nuxi build"
+    "postinstall": "nuxt prepare",
+    "local": "nuxt dev --dotenv .env",
+    "build": "nuxt build"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
