--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - run: pnpm install
       - run: pnpm nuxt build --preset github_pages
         env:
-          NUXT_APP_BASE_URL: ${{ github.event.repository.name }}
+          NUXT_APP_BASE_URL: /${{ github.event.repository.name }}/
           NUXT_PUBLIC_BASE_URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
